# bitnet.rs

./: .gitignore  CHECKLIST.md  Cargo.toml  Makefile  PROJECT_PLAN.md  README.md  performance_benchmark_gpu_vs_scalar_large_batch_txt  test_output.txt
.cargo/: config.toml
burn-custom-kernel-test-0-17/: Cargo.toml  README.md
burn-custom-kernel-test-0-17/tests/: consts.rs  custom_kernel.rs
crates/bitnet-app/: Cargo.toml  README.md
crates/bitnet-app/src/: cli.rs  generation.rs  main.rs  sampler.rs
crates/bitnet-app/src/gui/: README.md  app.rs  backend.rs  mod.rs  state.rs
crates/bitnet-converter/: Cargo.toml  README.md  bitnet-converter_combined.txt
crates/bitnet-converter/src/: lib.rs  main.rs  packer.rs  source.rs
crates/bitnet-converter/tests/: official_parity.rs  serialization_test.rs
crates/bitnet-core/: CHECKLIST.md  Cargo.toml  README.md  bitnet-core_combined.txt
crates/bitnet-core/crates/bitnet-core/logs/: dx12_test.txt
crates/bitnet-core/src/: attention.rs  bitnet_linear.rs  bitnetcore_test_utils.rs  embedding.rs  error.rs  feed_forward.rs  kernels.rs  lib.rs  model.rs  pipeline.rs  rms_norm.rs  rope.rs  settings.rs  tokenizer.rs  training.rs  visualization.rs  wgpu_context.rs
crates/bitnet-core/src/gui/: README.md  attention_map.rs  dashboard.rs  kernel_profiler.rs  mod.rs  weights_viewer.rs
crates/bitnet-core/src/kernels/: README.md  bitnet_attention.wgsl  bitnet_kernel.wgsl  bitnet_kernel_optimal.wgsl  bitnet_kernel_wasm.wgsl
crates/bitnet-core/src/kernels/cpu/: arm.rs  mod.rs  scalar.rs  x86.rs
crates/bitnet-core/tests/: DX12_test.rs  attention_gpu_test.rs  kernel_simd_tests.rs  kernel_tests.rs  kernel_tests_fastest.rs  pipeline_integration.rs  pipeline_validation.rs
crates/bitnet-test-utils/: README.md
crates/bitnet-test-utils/src/: lib.rs
crates/bitnet-tools/: Cargo.toml  README.md
crates/bitnet-tools/gui_combiner/: Cargo.toml
crates/bitnet-tools/gui_combiner/src/: main.rs
crates/bitnet-tools/src/: combine.rs  constants.rs  error.rs  hf_loader.rs  lib.rs  logging.rs  test_utils.rs
crates/bitnet-wasm/: Cargo.toml  README.md  dev.sh  main.js  stop.sh
crates/bitnet-wasm/src/: api.rs  lib.rs  tests.rs  utils.rs
crates/bitnet-wasm/static/: index.html  main.js  style.css
crates/bitnet-wasm/web/: index.html  main.js
custom-kernel-test/: Cargo.toml  README.md  bitnet.md
custom-kernel-test/logs/: custom_kernel_test.md
custom-kernel-test/src/: lib.rs  test_utils.rs
custom-kernel-test/tests/: add_scalar_corrected.wgsl  bitnet_kernel.wgsl  consts.rs  custom_kernel.rs
logs/: Attention_GPU_tests.md  bitnet-converter-20250706-095057.txt  bitnet-converter-20250706-095110.txt  browser_test.md  dx12_test.md  kernel_tests.md  kernel_tests_bkp.md  kernel_tests_fastest.md  official_parity_test.md  pipeline_integration.md  pipeline_validation.md  serialization_test.md
