[package]
name = "custom-kernel-test"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "25.0.2"
pollster = "0.4.0"
bytemuck = { version = "1.14", features = ["derive"] }
derive-new = "0.7.0"
futures-intrusive = "0.5.0"
chrono = "0.4.31"

[dev-dependencies]
lazy_static = "1.4.0"
serial_test = "2.0.0"

[workspace]
