[package]
name = "bitnet-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# The app depends on our core engine.
bitnet-core = { path = "../bitnet-core" }

# CLI and GUI libraries
clap = { workspace = true }
egui = "0.31.1"
eframe = "0.31.1"

# Other utilities
anyhow = { workspace = true }
directories = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
rand = "0.9.1"
rayon = "1.8"
num_cpus = "1.16"
rfd = "0.14"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }