[package]
name = "bitnet-core"
version = "0.1.0"
edition = "2021"
description = "High-performance BitNet inference engine in pure Rust, with CPU (SIMD) and GPU (WGSL) support"
authors = ["BitNet-rs Contributors"]
license = "Apache-2.0"
repository = "https://github.com/microsoft/BitNet"
documentation = "https://docs.rs/bitnet-core"
readme = "README.md"
keywords = ["machine-learning", "deep-learning", "llm", "bitnet", "gpu"]
categories = ["science", "computer-vision", "algorithms"]

# Docs.rs-specific settings
[package.metadata.docs.rs]
# Document all features
all-features = true
# Add platform-specific dependencies
targets = ["x86_64-unknown-linux-gnu"]
# Enable nightly docs features
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Explicitly use the workspace version of bincode.
bincode = { workspace = true }

# Utilities for loading and configuration
serde = { workspace = true }
serde_json = { workspace = true }
hf-hub = { workspace = true }
safetensors = { workspace = true }
tokenizers = { workspace = true }
thiserror = "1.0.57"
log = { workspace = true }
tracing = { workspace = true }
bytemuck = { workspace = true }
pollster = { workspace = true }
derive-new = "0.7.0"
bitnet-tools = { path = "../bitnet-tools" }
wgpu = { version = "25.0.2", optional = true }
rand = "0.9.1"
tokio = { version = "1.36.0", features = ["full"] }
futures-intrusive = "0.5"
bitnet-converter = { path = "../bitnet-converter" }
half = "2"
memmap2 = "0.9"
chrono = "0.4"
lazy_static = "1.4.0"

[dev-dependencies]
serial_test = "3.2.0"

[features]
default = ["gpu"]
# Enables the developer-facing visualization tools
core-gui = []
# Enables model training capabilities (work in progress)
training = []
# Enables the GPU backend using WGPU/WGSL
gpu = ["wgpu"]